kubernetes/speedtest/speedtest-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: speedtest
  namespace: speedtest
spec:
  type: ClusterIP
  selector:
    app: speedtest
  ports:
    - port: 5216
      name: http
